--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ruby: [2.7, '3.1.2']
+        ruby: ['3.1.2', head, jruby, jruby-head, truffleruby, truffleruby-head]
     services:
       db:
         image: postgres:latest
@@ -32,7 +32,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         with:
