--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        ruby: ['3.1.2', head, jruby, jruby-head, truffleruby, truffleruby-head]
+        ruby: ['3.1.2']
     services:
       db:
         image: postgres:latest
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports: ['5432:5432']
+          POSTGRES_PASSWORD: '123456'
+        ports: ['4444:4444']
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -40,7 +40,7 @@ jobs:
           bundler-cache: true
       - name: Build and run tests
         env:
-          DATABASE_URL: postgres://postgres:@localhost:5432/test
+          DATABASE_URL: postgres://postgres:@localhost:4444/test
           RAILS_ENV: test
         run: |
           sudo apt-get -yqq install libpq-dev
