--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/test
           RAILS_ENV: test
+          TWILIO_ACCOUNT_SID: 'AC2fe12f5b3270376f2b08d3048b2dd567'
+          TWILIO_AUTH_TOKEN: '66f74c72d7b0bb7b79860ccafeadd013'
+          TWILIO_FROM_PHONE: '+15856011494' 
+          TWILIO_TO_PHONE: '+393513344216'
         run: |
           sudo apt-get -yqq install libpq-dev
           bundle install --jobs 4 --retry 3
