--- a/ .env.example
+++ b/ .env.example
@@ -1,4 +1,6 @@
 DATABASE_URL='postgres://postgres:123456@localhost:4444/clinic?encoding=utf8&pool=50&timeout=5000'
+DATABASE_URL_PRODUCTION='postgres://postgres:12345@localhost:5432/clinic?encoding=utf8&pool=50&timeout=5000'
+CLINIC_DATABASE_PASSWORD='12345'
 AWS_ACCESS_KEY_BACKEND=nil
 AWS_SECRET_KEY_BACKEND=hil
 AWS_REGION=nil
@@ -7,10 +9,11 @@ ADMIN_EMAIL=admin@example.com
 BACKEND_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:3000
 TWILIO_ACCOUNT_SID='AC2fe12f5b3270376f2b08d3048b2dd567'
-TWILIO_AUTH_TOKEN='66f74c72d7b0bb7b79860ccafeadd013'
-TWILIO_FROM_PHONE = '+15856011494' 
-TWILIO_TO_PHONE = '+393513344216'
-DEFAULT_FROM_EMAIL = 'support@clinic.com'
+TWILIO_AUTH_TOKEN='5129031f69d7a21c487b02461af207b0'
+# TWILIO_AUTH_TOKEN='66f74c72d7b0bb7b79860ccafeadd013'
+TWILIO_FROM_PHONE='+15856011494' 
+TWILIO_TO_PHONE='+393513344216'
+DEFAULT_FROM_EMAIL='support@clinic.com'
 
 TWILIO_PASSWORD='Bileberda2233makarenkoj'
 RECOVERY_CODE='ok1xLsa4HJM0yRNVYueGxWDN56j_HG28AvzePJHy'
