--- a/ .env.example
+++ b/ .env.example
@@ -12,3 +12,4 @@ FRONTEND_URL=http://localhost:3000
 TWILIO_FROM_PHONE='+15856011494' 
 TWILIO_TO_PHONE='+393513344216'
 DEFAULT_FROM_EMAIL='support@clinic.com'
+RAILS_MASTER_KEY='d12df3ac62c700e45a196af41a1a5f84'
