--- a/config/storage.yml
+++ b/config/storage.yml
@@ -34,9 +34,10 @@ local:
 #   primary: local
 #   mirrors: [ amazon, google, microsoft ]
 
-tigris:
-  service: S3
-  access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
-  secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
-  endpoint: <%= ENV["AWS_ENDPOINT_URL_S3"] %>
-  bucket: <%= ENV["BUCKET_NAME"] %>
+# settings fo fly
+# tigris:
+#   service: S3
+#   access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+#   secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
+#   endpoint: <%= ENV["AWS_ENDPOINT_URL_S3"] %>
+#   bucket: <%= ENV["BUCKET_NAME"] %>
