--- a/config/storage.yml
+++ b/config/storage.yml
@@ -13,7 +13,9 @@ amazon:
   access_key_id: <%= ENV['S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
   region: us-east-1
-  bucket: <%= ENV['S3_BUCKET'] %>
+  # bucket: <%= ENV['S3_BUCKET'] %>
+  bucket: clinic-rails-bucket
+  public: true
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
